--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Test
-      run: make test
+      run: go test ./... 
 
     - name: Codecov
       uses: codecov/codecov-action@v1.0.10
