--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,9 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Test
-      run: go test ./... 
+      run: |
+        go generate ./...
+        go test ./... 
 
     - name: Codecov
       uses: codecov/codecov-action@v1.0.10
