--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,19 +14,29 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v4
 
-    - name: Set up Go 1.x
-      uses: actions/setup-go@v2
-      with:
-        go-version: ^1.16
+      - name: Set up Go 1.x
+        uses: actions/setup-go@v5
+        with:
+          go-version: ^1.21
 
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
+      - name: Test
+        run: |
+          go generate ./...
+          go get -v -t -d ./...
+          go install github.com/jstemmer/go-junit-report/v2@latest
+          go test -coverprofile=coverage.out -covermode=atomic -cover -json -v ./... 2>&1 | go-junit-report -set-exit-code > tests.xml
 
-    - name: Test
-      run: |
-        go generate ./...
-        go test ./... 
+      - name: Upload test results to Codecov
+        uses: codecov/test-results-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: tests.xml
 
-    - name: Codecov
-      uses: codecov/codecov-action@v1.0.10
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4.1.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: coverage.out
